--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,8 @@
 	<head>
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-		<link href="css/all.css" rel="stylesheet">
+		<meta name="viewport" content="width=device-width, initial-scale=1, 
+            shrink-to-fit=no, viewport-fit=cover, maximum-scale=1">
 		<link rel="stylesheet" href="css/style.css">
 		<title>Webtrap</title>
 
