Put some info into footer #9

--- a/public/index.html
+++ b/public/index.html
@@ -67,7 +67,7 @@
 
 			<span id="endpointDetailGrid">
                <script type="module">
-               	endpointDetailGrid.innerHTML += EndpointDetailGrid();
+               	    endpointDetailGrid.innerHTML += EndpointDetailGrid();
                </script>
            </span>
 
@@ -85,7 +85,7 @@
 		</div>
 				
 		<footer>
-			
+            <b>Webtrap</b> · <a href="https://github.com/nigol/webtrap">Github</a>
 		</footer>
 	</body>
 </html>
