--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, 
             shrink-to-fit=no, viewport-fit=cover, maximum-scale=1">
+        <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
 		<link rel="stylesheet" href="css/style.css">
 		<title>Webtrap</title>
 
@@ -13,18 +14,22 @@
 		<script src="parts/endpoint-cell.js" type="text/javascript"></script>
 		<script src="parts/endpoint-detail-grid.js" type="text/javascript"></script>
 		<script src="parts/endpoint-edit.js" type="text/javascript"></script>
+        <script src="parts/help-page.js" type="text/javascript"></script>
 
 		<script>
 			var update;
 			var mainController;
 			var editController;
+            var helpController;
 		</script>
 		<script type="module">
 			import {updateComponent, mainController as mainControllerInst} from "./app/main.js";
 			import {editController as editControllerInst} from "./app/main.js";
+            import {helpController as helpControllerInst} from "./app/main.js";
 			update = updateComponent;
 			mainController = mainControllerInst;
 			editController = editControllerInst;
+            helpController = helpControllerInst;
 			window.onload = () => mainController.refreshEndpointsData();
 		</script>
 		
@@ -64,6 +69,12 @@
             		menuBar.innerHTML += ButtonBar();
             	</script>
 			</span>
+            
+            <span id="helpPage">
+                <script type="module">
+                    helpPage.innerHTML += HelpPage();
+                </script>
+            </span>
 
 			<span id="endpointDetailGrid">
                <script type="module">
